[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adsb-sde"
version = "0.1.0"
description = "Probabilistic SDE-style LSTM transition model for ADS-B trajectory anomaly detection"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pyyaml",
    "torch",
    "tqdm",
    "matplotlib",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
